# adequately-engineered-inditr

./: Dockerfile  LICENSE  Makefile  README.md  build.ps1  docker-compose.yml  index.html  pyproject.toml
data/itr_schemas/: itr1_ay2024_25.json  itr2_ay2024_25.json
design/: banner_desktop.html  banner_minimal.html  banner_mobile.html  index.html
docker/: entrypoint.sh  nginx.conf
frontend/: index.html
inditr/: __init__.py
inditr/api/: main.py  schemas.py
inditr/engine/: __init__.py  capital_gains.py  deductions.py  regime.py  slabs.py  tds.py
inditr/graph/: __init__.py  checkpointer.py  edges.py  graph.py  llm.py  tools.py
inditr/models/: __init__.py  computation.py  documents.py  outputs.py  profile.py  state.py  tax_data.py
inditr/output_builders/: __init__.py  itr_json.py  pdf_summary.py  regime_report.py
inditr/parsers/: __init__.py  bank_statement.py  base.py  classifier.py  form16.py  llm_extractor.py  llm_validator.py  registry.py  salary_slip.py  upstox.py  vision.py  zerodha.py
inditr/rag/: __init__.py  embedder.py  indexer.py  retriever.py  store.py
scripts/: build_rag_index.py  smoke_test.py
tests/test_engine/: test_capital_gains.py  test_deductions.py  test_regime.py  test_regime_flaws.py  test_slabs.py
tests/test_graph/: test_edges.py  test_graph_build.py  test_nodes_documents.py  test_nodes_gap_fill.py  test_nodes_intake.py  test_nodes_output.py
tests/test_integration/: test_downloads_e2e.py  test_engine_e2e.py  test_llm_e2e.py
tests/test_models/: test_computation.py  test_documents.py  test_outputs.py  test_profile.py  (+1 more)
(+23 files in other folders)
